swen430as2/test_files/valid/unions/UnionType_Valid_04.while
bool isInteger(int|null x) {
    if(x == null) {
      return false;
    } else {
      return true;
    }
}

void main() {
    assert isInteger(1);
    assert !isInteger(null);    
}

