swen430as2/test_files/invalid/is/Is_Invalid_05-PR04.while
void main() {
    int x = 0;
    assert x is x;
}
